Fri Nov  9 11:29:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Persistent_Naming_Context.cpp:
          Removed msvc6 workaround and layout changes

        * orbsvcs/orbsvcs/Naming/Transient_Naming_Context.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic.h:
        * orbsvcs/orbsvcs/Notify/Sequence/SequenceProxyPushConsumer.h:
          Layout changes

        * orbsvcs/tests/FT_App/FT_TestReplica_i.cpp:
          Fixed GCC 4.2 warnings

Fri Nov  9 09:04:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAO_Singleton_Manager.cpp:
          dynamically_allocated is a bool

        * tao/PI/PI.cpp:
        * tao/ObjRefTemplate/ORT_Adapter_Factory_Impl.{h,cpp}:
        * tao/ObjRefTemplate/ORT_Adapter_Factory_Impl.cpp:
          Layout changes

        * tao/ORBInitializer_Registry.cpp:
          With VxWorks and TSS emulation enabled we do need to search the
          global registry because the loader which creates the global registry
          is a different thread then the thread that executes main

Wed Nov  7 18:48:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Bug_2133/*:
          New regression test for bug 2133, thanks to Simon McQueen for
          creating this test

        * testsPortable_Interceptors/Bug_3080/server.cpp:
          Fixed memory leak in this test

        * tests/Blocking_Sync_None/run_test.pl:
          Added support for -debug which adds -ORBDebugLevel 10 to the
          executables

Wed Nov  7 15:40:23 UTC 2007  Jaiganesh B <jai@shiva.dre.vanderbilt.edu>

        * tests/Portable_Interceptors/Bug_3079/Client_Request_Interceptor.cpp:

          Modified the ACE_DEBUG statements to use the word "exception"
          instead of the word "EXCEPTION" which is interpreted by the
          autobuilds as a test failure.

Wed Nov  7 15:33:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
