@@ -10,9 +10,14 @@ use PerlACE::Run_Test;
 
 $status = 0;
 
+if (PerlACE::is_vxworks_test()) {
+$CL = new PerlACE::ProcessVX ("server", "-ORBObjRefStyle URL");
+}
+else {
 $CL = new PerlACE::Process ("server", "-ORBObjRefStyle URL");
+}
 
-$client = $CL->SpawnWaitKill (300);
+$client = $CL->SpawnWaitKill ($PerlACE::wait_interval_for_process_creation);
 
 if ($client != 0) {
     print STDERR "ERROR: client returned $client\n";
